components/disaster-recovery/development/network_policy_allow_to_apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-apiserver
  namespace: konflux-disaster-recovery
spec:
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: openshift-kube-apiserver
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
    ports:
    - port: 6443
      protocol: TCP
